src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@pre-mem2reg@llvm21_tket.quantum.CX.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { ptr, ptr } @_hl.main.1(ptr %0, ptr %1) !dbg !3 {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca ptr, align 8
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca ptr, align 8
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store ptr %1, ptr %"2_1", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load ptr, ptr %"2_1", align 8
  call void @__quantum__qis__cx__body(ptr %"2_01", ptr %"2_12"), !dbg !10
  store ptr %"2_01", ptr %"4_0", align 8, !dbg !10
  store ptr %"2_12", ptr %"4_1", align 8, !dbg !10
  %"4_03" = load ptr, ptr %"4_0", align 8
  %"4_14" = load ptr, ptr %"4_1", align 8
  store ptr %"4_03", ptr %"0", align 8
  store ptr %"4_14", ptr %"1", align 8
  %"05" = load ptr, ptr %"0", align 8
  %"16" = load ptr, ptr %"1", align 8
  %mrv = insertvalue { ptr, ptr } poison, ptr %"05", 0
  %mrv7 = insertvalue { ptr, ptr } %mrv, ptr %"16", 1
  ret { ptr, ptr } %mrv7
}

declare void @__quantum__qis__cx__body(ptr, ptr)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ ptr, ptr }", file: !2, size: 128, align: 8, elements: !8)
!8 = !{!9, !9}
!9 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!10 = !DILocation(line: 27062, column: 402, scope: !3)
