src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@pre-mem2reg@llvm21_tket.quantum.CY.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { ptr, ptr } @_hl.main.1(ptr %0, ptr %1) {
alloca_block:
  %"0" = alloca ptr, align 8
  %"1" = alloca ptr, align 8
  %"2_0" = alloca ptr, align 8
  %"2_1" = alloca ptr, align 8
  %"4_0" = alloca ptr, align 8
  %"4_1" = alloca ptr, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  store ptr %1, ptr %"2_1", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  %"2_12" = load ptr, ptr %"2_1", align 8
  call void @__quantum__qis__cy__body(ptr %"2_01", ptr %"2_12")
  store ptr %"2_01", ptr %"4_0", align 8
  store ptr %"2_12", ptr %"4_1", align 8
  %"4_03" = load ptr, ptr %"4_0", align 8
  %"4_14" = load ptr, ptr %"4_1", align 8
  store ptr %"4_03", ptr %"0", align 8
  store ptr %"4_14", ptr %"1", align 8
  %"05" = load ptr, ptr %"0", align 8
  %"16" = load ptr, ptr %"1", align 8
  %mrv = insertvalue { ptr, ptr } poison, ptr %"05", 0
  %mrv7 = insertvalue { ptr, ptr } %mrv, ptr %"16", 1
  ret { ptr, ptr } %mrv7
}

declare void @__quantum__qis__cy__body(ptr, ptr)
